--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "lucide-react": "^0.552.0",
         "react-confirm-alert": "^3.0.6",
         "react-hot-toast": "^2.6.0",
+        "recharts": "^3.3.0",
         "tailwind-merge": "^3.3.1"
     }
 }
