--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: dada22/inventory-app:latest
     container_name: inventory_app
     ports:
-      - "8080:80"
+      - "8081:80"
     environment:
       DB_CONNECTION: mysql
       DB_HOST: db
@@ -18,13 +18,20 @@ services:
     restart: unless-stopped
     command: >
       sh -c "
-      /usr/local/bin/wait-for-it.sh db:3306 -- &&
-      if [ ! -s .env ] || ! grep -q 'APP_KEY=' .env; then 
-        cp .env.example .env && 
-        php artisan key:generate --force; 
+      /usr/local/bin/wait-for-it.sh db:3306 --timeout=30 --strict &&
+      echo 'Database is up!' &&
+      if [ ! -s .env ] || ! grep -q 'APP_KEY=' .env; then
+        echo 'Generating .env and APP_KEY...' &&
+        cp .env.example .env &&
+        php artisan key:generate --force
       fi &&
+      echo 'Installing PHP dependencies...' &&
+      composer install --no-interaction --optimize-autoloader &&
+      echo 'Running migrations...' &&
       php artisan migrate --force &&
-      php artisan db:seed --class=DatabaseSeeder &&
+      echo 'Seeding database...' &&
+      php artisan db:seed --force &&
+      echo 'Starting Apache...' &&
       apache2-foreground
       "
 
