--- a/.env.example
+++ b/.env.example
@@ -21,11 +21,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db
-DB_PORT=3306
-DB_DATABASE=inventory
-DB_USERNAME=root
-DB_PASSWORD=root
+DATABASE_URL=${DATABASE_URL}
+# DB_HOST=
+# DB_PORT=
+# DB_DATABASE=
+# DB_USERNAME=
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
