updating deployment again again

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_ENV=production
+APP_KEY=base64:VNZGZGJryZRmhhbm2RL1fZKcwgLbqlKDoxLEUXxeQdY=
 APP_DEBUG=true
 APP_URL=http://localhost:8081
 
@@ -21,7 +21,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DATABASE_URL=${DATABASE_URL}
+DATABASE_URL=mysql://root:NOQHtDMhuqckTsoTXmwIlWwxxnxqIRIx@switchback.proxy.rlwy.net:18500/railway
 # DB_HOST=
 # DB_PORT=
 # DB_DATABASE=
