updating deployment yrab

--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DATABASE_URL=mysql://root:NOQHtDMhuqckTsoTXmwIlWwxxnxqIRIx@switchback.proxy.rlwy.net:18500/railway
+DB_URL_URL=mysql://root:NOQHtDMhuqckTsoTXmwIlWwxxnxqIRIx@switchback.proxy.rlwy.net:18500/railway
 # DB_HOST=
 # DB_PORT=
 # DB_DATABASE=
