updating deployment yrabbbb

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
-APP_ENV=production
-APP_KEY=base64:VNZGZGJryZRmhhbm2RL1fZKcwgLbqlKDoxLEUXxeQdY=
+APP_ENV=local
+APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost:8081
+APP_URL=http://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,12 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_URL_URL=mysql://root:NOQHtDMhuqckTsoTXmwIlWwxxnxqIRIx@switchback.proxy.rlwy.net:18500/railway
-# DB_HOST=
-# DB_PORT=
-# DB_DATABASE=
-# DB_USERNAME=
-# DB_PASSWORD=
+DB_HOST=127.0.0.1
+DB_PORT=3307
+DB_DATABASE=inventory
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
